--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8081
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/demo?useUnicode=true&characterEncoding=UTF-8
 jdbc.user=root
-jdbc.password=lk123456
+jdbc.password=jacky790521
 
 #mybatis
 mybatis_config_file=mybatis-config.xml
