增加单元测试接口； 修改了原来mapper文件的配置错误； -------mybatis原来是追加mapper文件配置啊，，，，！！！！！！！！！大坑

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8081
 
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/demo?useUnicode=true&characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://localhost:3306/lefince?useUnicode=true&characterEncoding=UTF-8
 jdbc.user=root
 jdbc.password=jacky790521
 
